--- a/setup/setup.yml
+++ b/setup/setup.yml
@@ -4,7 +4,7 @@
   connection: local
   vars:
 #     This is the location in which Ansible files can be installed.
-     ansible_workspace: "~/ansible"
+     ansible_workspace: "~/.ansible"
 
 #     This is the location where credentials, license material, GCP service account files, AWS key and secret, etc are stored"
      apigee_secure_folder: "~/.apigee-secure"
