updated requirements list

--- a/installations/aio/requirements.yml
+++ b/installations/aio/requirements.yml
@@ -116,3 +116,6 @@
 - src: https://github.com/carlosfrias/apigee-opdk-settings-postgres.git
 
 - src: https://github.com/carlosfrias/apigee-opdk-settings-region.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-setup-bootstrap-archive-installer.git
+
