--- a/installations/multi-node/install.yml
+++ b/installations/multi-node/install.yml
@@ -155,7 +155,7 @@
 - name: Configure & Install Postgres
   hosts: pg
   gather_facts: no
-  strategy: free
+  serial: 1
   tags: ['pg','edge']
   vars:
     ansible_workspace: "~/ansible"
@@ -164,11 +164,11 @@
     - "~/.apigee-secure"
     - "~/.apigee"
   roles:
-  - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'pg-config'] }
-  - { role: apigee-opdk-setup-silent-installation-config, tags: ['minimum', 'config', 'pg-config']  }
-  - { role: apigee-opdk-setup-component, profile: 'ps', tags: ['minimum', 'pg-setup'] }
-  - { role: apigee-opdk-start-components, tags: ['pg-start', 'start'] }
-  - { role: apigee-opdk-setup-status, tags: ['pg-status', 'status'] }
+    - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'pg-config'] }
+    - { role: apigee-opdk-setup-silent-installation-config, tags: ['minimum', 'config', 'pg-config']  }
+    - { role: apigee-opdk-setup-component, profile: 'ps', tags: ['minimum', 'pg-setup'] }
+    - { role: apigee-opdk-start-components, tags: ['pg-start', 'start'] }
+    - { role: apigee-opdk-setup-status, tags: ['pg-status', 'status'] }
 
 - name: Configure Postgres Master
   hosts: pgmaster
