--- a/installations/aio/requirements.yml
+++ b/installations/aio/requirements.yml
@@ -119,3 +119,14 @@
 
 - src: https://github.com/carlosfrias/apigee-opdk-setup-bootstrap-archive-installer.git
 
+- src: https://github.com/carlosfrias/apigee-opdk-settings-ldap.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-management-server.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-postgres.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-private-address.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-cassandra.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-region.git
