updated for current roles

--- a/installations/multi-node/install.yml
+++ b/installations/multi-node/install.yml
@@ -23,7 +23,7 @@
 - name: Install Edge
   hosts: edge
   serial: 1
-  tags: ['edge']
+  tags: ['edge', 'edge-common']
   vars:
     property_folders:
     - "~/.apigee-secure"
