--- a/post-installation/validations/analytics/validate.yml
+++ b/post-installation/validations/analytics/validate.yml
@@ -48,7 +48,7 @@
     - { role: apigee-opdk-server-registration-state, username: "{{ opdk_user_email }}", password: "{{ opdk_user_pass }}", server_self: "{{ edge_ps_self }}", mgmt_server_ip: "{{ local_mgmt_ip }}" }
 
 - name: Apigee Analytics group scope state
-  hosts: ms
+  hosts: ms[0]
   gather_facts: no
   tags: ['scope']
   vars:
