--- a/post-installation/validations/analytics/validate.yml
+++ b/post-installation/validations/analytics/validate.yml
@@ -56,6 +56,7 @@
     - "~/.apigee-secure"
     - "~/.apigee/custom-properties.yml"
   roles:
+  - { role: apigee-opdk-modules }
   - { role: apigee-opdk-setup-scopes-state, ax_group: "{{ scopes_axgroup | default('axgroup001') }}" }
 
 - name: Analytics status
