cleaned up validate

--- a/post-installation/validations/cassandra/validate.yml
+++ b/post-installation/validations/cassandra/validate.yml
@@ -22,7 +22,7 @@
 - name: Apigee Cassandra Ring Status
   hosts: ds
   gather_facts: no
-  tags: ['ring-status']
+  tags: ['status']
   serial: 1
   vars:
 
