cleaned up validate

--- a/post-installation/validations/zookeeper/validate.yml
+++ b/post-installation/validations/zookeeper/validate.yml
@@ -9,21 +9,14 @@
     shell: "echo srvr | nc localhost 2181 | grep Mode:"
     register: result
 
-  - name: Report Results
-    debug:
-      var: result
-
 - name: Apigee Zookeeper Status
   hosts: ds
   gather_facts: no
-  tags: ['zk-status']
+  tags: ['status']
   serial: 1
   tasks:
   - name: Display Zookeeper Leadership
     shell: "echo srvr | nc localhost 2181"
     register: result
 
-  - name: Report Results
-    debug:
-      var: result
 
