--- a/installations/aio/install.yml
+++ b/installations/aio/install.yml
@@ -11,7 +11,7 @@
 
   roles:
   - { role: apigee-opdk-os-pre-requisites, tags: ['os'] }
-  - { role: apigee-opdk-setup-apigee-user, tags: ['apigee-user', 'bootstrap'] }
+  - { role: apigee-opdk-setup-apigee-user, tags: ['config', 'apigee-user', 'bootstrap'] }
   - { role: apigee-opdk-setup-apigee-user-ownership, tags: ['apigee-user', 'bootstrap'] }
   - { role: apigee-opdk-setup-java-home, tags: ['java-home', 'bootstrap'] }
   - { role: apigee-opdk-setup-bootstrap, tags: ['apigee-bootstrap', 'bootstrap'] }
