--- a/installations/aio/install.yml
+++ b/installations/aio/install.yml
@@ -10,7 +10,17 @@
     - "~/.apigee"
 
   roles:
-  - { role: apigee-opdk-os-pre-requisites, tags: ['os'] }
+  - { role: apigee-opdk-modules, tags: ['config', 'minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup'] }
+  - { role: apigee-opdk-setup-os-epel, tags: ['epel'] }
+  - { role: apigee-opdk-shutdown-iptables, tags: ['minimum', 'iptables'] }
+  - { role: apigee-opdk-yum-repository-proxy-config, tags: ['yum-proxy-config']}
+  - { role: apigee-opdk-setup-os-minimum, tags: ['os-minimum'] }
+  - { role: apigee-opdk-setup-os-limits, tags: ['limit'] }
+  - { role: apigee-opdk-setup-os-sysctl, tags: ['sysctl'] }
+  - { role: apigee-opdk-setup-selinux-disable, tags: ['minimum', 'selinux'] }
+  - { role: apigee-server-restart, tags: ['minimum', 'restart-server'], start_check_delay: 30, when: (selinux_disabled is defined and selinux_disabled.changed) or (iptables_disabled is defined and not iptables_disabled) or (force_restart is defined and force_restart)  }
+  - { role: apigee-opdk-setup-os-common, tags: ['os-common'] }
+  - { role: apigee-opdk-setup-openjdk, tags: ['minimum', 'openjdk'], jdk_version: '1.8' }
   - { role: apigee-opdk-setup-apigee-user, tags: ['config', 'apigee-user', 'bootstrap'] }
   - { role: apigee-opdk-setup-apigee-user-ownership, tags: ['apigee-user', 'bootstrap'] }
   - { role: apigee-opdk-setup-java-home, tags: ['java-home', 'bootstrap'] }
@@ -25,7 +35,6 @@
   - { role: apigee-opdk-settings-region, tags: ['config', 'minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
   - { role: apigee-opdk-settings-cassandra, tags: ['config', 'minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
   - { role: apigee-opdk-settings-postgres, tags: ['config', 'minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
-  - { role: apigee-opdk-modules, tags: ['config'] }
   - { role: apigee-opdk-setup-silent-installation-config, tags: ['config'] }
   - { role: apigee-opdk-setup-component, profile: 'aio', tags: ['aio'] }
   - { role: apigee-opdk-setup-status, tags: ['status'] }
@@ -33,45 +42,3 @@
   - { role: apigee-opdk-setup-org, tags: ['org', 'org-create'] }
   - { role: apigee-opdk-setup-validate, tags: ['validate'] }
   - { role: apigee-opdk-setup-validate-cleanup, tags: ['validate', 'validate-rmp-cleanup'] }
-
-- name: Download log files
-  hosts: edge
-  gather_facts: no
-  become: true
-  tags: ['logs']
-  roles:
-  - { role: apigee-fetch-files, download_pattern: '{{ pattern }}', download_folder: "{{ playbook_dir }}/{{ target_logs_folder }}" }
-  vars:
-    opdk_installer_path: /tmp/edge
-    apigee_home: /opt/apigee
-    target_logs_folder: planet_logs
-    pattern:
-    - { dir: '/etc/', pattern: 'hosts*' }
-    - { dir: '/etc/', pattern: 'environment' }
-    - { dir: '/etc/', pattern: 'profile' }
-    - { dir: '/etc/', pattern: 'bashrc' }
-    - { dir: '/etc/', pattern: 'resolv.conf' }
-    - { dir: '/etc/', pattern: 'sysctl.conf' }
-    - { dir: '/etc/', pattern: 'sudoers' }
-    - { dir: '/etc/security/', pattern: 'limits.conf' }
-    - { dir: '/etc/security/limits.d/', pattern: '*conf' }
-    - { dir: '/var/log/', pattern: 'messages' }
-    - { dir: '/tmp', pattern: 'setup*.log' }
-    - { dir: '{{ opdk_installer_path }}/', pattern: '*' }
-    - { dir: '{{ apigee_home }}/', pattern: '*.out' }
-    - { dir: '{{ apigee_home }}/var/log', pattern: '*.log' }
-    - { dir: '{{ apigee_home }}/customer/', pattern: '*' }
-    - { dir: '{{ apigee_home }}/etc/', pattern: 'default*.sh' }
-    - { dir: '{{ apigee_home }}/customer', pattern: '*' }
-    - { dir: '{{ apigee_home }}/apigee-cassandra/', pattern: '*conf' }
-    - { dir: '{{ apigee_home }}/apigee-cassandra/', pattern: '*cfg' }
-    - { dir: '{{ apigee_home }}/apigee-cassandra/', pattern: '*yml' }
-    - { dir: '{{ apigee_home }}/apigee-cassandra/', pattern: '*yaml' }
-    - { dir: '{{ apigee_home }}/apigee-cassandra/', pattern: '*properties' }
-    - { dir: '{{ apigee_home }}/apigee-zookeeper/', pattern: '*conf' }
-    - { dir: '{{ apigee_home }}/apigee-zookeeper/', pattern: '*cfg' }
-    - { dir: '{{ apigee_home }}/apigee-zookeeper/', pattern: '*yml' }
-    - { dir: '{{ apigee_home }}/apigee-zookeeper/', pattern: '*yaml' }
-    - { dir: '{{ apigee_home }}/apigee-zookeeper/', pattern: '*properties' }
-    - { dir: '{{ apigee_home }}/apigee-postgresql/', pattern: '*conf' }
-
