--- a/installations/mirror/install-archive.yml
+++ b/installations/mirror/install-archive.yml
@@ -10,22 +10,27 @@
     - "~/.apigee"
     apigeerepobasepath: '/opt/apigee/data/apigee-mirror'
   roles:
-  - { role: apigee-opdk-setup-default-settings, tags: ['cache'] }
-  #  - { role: apigee-opdk-os-pre-requisites, tags: ['os'] }
-  - { role: apigee-opdk-modules }
-  - { role: apigee-opdk-setup-os-epel, tags: ['os','epel'] }
-  - { role: apigee-opdk-temporary-remove-targets, tags: ['os','remove']}
-  - { role: apigee-opdk-shutdown-iptables, tags: ['os','iptables'] }
-  - { role: apigee-opdk-yum-repository-proxy-config, tags: ['os','yum-proxy-config']}
-  - { role: apigee-opdk-setup-os-minimum, tags: ['os','os-minimum'] }
-  - { role: apigee-opdk-setup-os-limits, tags: ['os','limit'] }
-  - { role: apigee-opdk-setup-os-sysctl, tags: ['os','sysctl'] }
-  - { role: apigee-opdk-setup-selinux-disable, tags: ['os','selinux'] }
-  - { role: apigee-server-restart, tags: ['os','restart-server'], start_check_delay: 30, when: (selinux_disabled is defined and selinux_disabled.changed) or (iptables_disabled is defined and not iptables_disabled) or (force_restart is defined and force_restart)  }
-  - { role: apigee-opdk-setup-os-common, tags: ['os','os-common'] }
-  - { role: apigee-opdk-setup-openjdk, tags: ['os','openjdk'], jdk_version: '1.8' }
+  - { role: apigee-opdk-modules, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup'] }
+  - { role: apigee-opdk-setup-os-epel, tags: ['epel'] }
+  - { role: apigee-opdk-shutdown-iptables, tags: ['minimum', 'iptables'] }
+  - { role: apigee-opdk-yum-repository-proxy-config, tags: ['yum-proxy-config']}
+  - { role: apigee-opdk-setup-os-minimum, tags: ['os-minimum'] }
+  - { role: apigee-opdk-setup-os-limits, tags: ['limit'] }
+  - { role: apigee-opdk-setup-os-sysctl, tags: ['sysctl'] }
+  - { role: apigee-opdk-setup-selinux-disable, tags: ['minimum', 'selinux'] }
+  - { role: apigee-server-restart, tags: ['minimum', 'restart-server'], start_check_delay: 30, when: (selinux_disabled is defined and selinux_disabled.changed) or (iptables_disabled is defined and not iptables_disabled) or (force_restart is defined and force_restart)  }
+  - { role: apigee-opdk-setup-os-common, tags: ['os-common'] }
+  - { role: apigee-opdk-setup-openjdk, tags: ['minimum', 'openjdk'], jdk_version: '1.8' }
+  - { role: apigee-opdk-settings-private-address, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
+  - { role: apigee-opdk-settings-management-server, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
+  - { role: apigee-opdk-settings-ldap, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
+  - { role: apigee-opdk-settings-region, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
+  - { role: apigee-opdk-settings-cassandra, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
+  - { role: apigee-opdk-settings-postgres, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
   - { role: apigee-opdk-setup-apigee-user, tags: ['apigee-user', 'bootstrap'] }
   - { role: apigee-opdk-setup-apigee-user-ownership, tags: ['apigee-user', 'bootstrap'] }
   - { role: apigee-opdk-setup-java-home, tags: ['java-home', 'bootstrap'] }
+  - { role: apigee-opdk-setup-bootstrap, tags: ['apigee-bootstrap', 'bootstrap'] }
+  - { role: apigee-opdk-setup-apigee-user-ownership, tags: ['apigee-user', 'bootstrap'] }
   - { role: apigee-opdk-setup-bootstrap, tags: ['install'], install_archive_mirror: true }
 
