--- a/post-installation/upgrade/requirements.yml
+++ b/post-installation/upgrade/requirements.yml
@@ -67,4 +67,16 @@
 
 - src: https://github.com/carlosfrias/apigee-opdk-update-component-qpidd.git
 
+- src: https://github.com/carlosfrias/apigee-opdk-settings-ldap.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-management-server.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-postgres.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-private-address.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-cassandra.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-region.git
+
 
