--- a/post-installation/upgrade/requirements.yml
+++ b/post-installation/upgrade/requirements.yml
@@ -85,4 +85,6 @@
 
 - src: https://github.com/carlosfrias/apigee-opdk-setup-validate-cleanup.git
 
+- src: https://github.com/carlosfrias/apigee-opdk-setup-openjdk.git
+
 
