--- a/post-installation/upgrade/requirements.yml
+++ b/post-installation/upgrade/requirements.yml
@@ -87,4 +87,7 @@
 
 - src: https://github.com/carlosfrias/apigee-opdk-setup-openjdk.git
 
+- src: https://github.com/carlosfrias/apigee-opdk-settings-qpid.git
+
+
 
