--- a/post-installation/upgrade/upgrade.yml
+++ b/post-installation/upgrade/upgrade.yml
@@ -92,6 +92,7 @@
     - { role: apigee-opdk-start-components }
     - { role: apigee-opdk-server-self, server_types: ['qs'], tags: ['self']  }
     - { role: apigee-opdk-set-reachable, reachability: False, server_types: ['qs'], tags: ['qpid-reachability-false'] }
+    - { role: apigee-opdk-settings-qpid, tags: ['config', 'cache', 'qpid']}
     - { role: apigee-opdk-iptables-port-block, destination_port: '{{ qpid_messaging_port }}', tags: ['qpid-port-block'] }
     - { role: apigee-opdk-update-component-qpidd, tags: ['qpid-upgrade'] }
     - { role: apigee-opdk-update-component,  component: 'qpid', tags: ['qpid-upgrade'] }
