--- a/post-installation/upgrade/upgrade.yml
+++ b/post-installation/upgrade/upgrade.yml
@@ -18,7 +18,7 @@
     - { role: apigee-opdk-settings-postgres, tags: ['config', 'minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
     - { role: apigee-opdk-setup-openjdk, tags: ['minimum', 'openjdk'], jdk_version: '1.8' }
     - { role: apigee-opdk-setup-java-home, tags: ['java-home', 'bootstrap'] }
-    - { role: apigee-opdk-setup-bootstrap, tags: ['apigee-bootstrap', 'bootstrap'] }
+    - { role: apigee-opdk-setup-bootstrap, tags: ['apigee-bootstrap', 'bootstrap'], upgrade_edge: true}
     - { role: apigee-opdk-setup-license, tags: ['license', 'bootstrap'] }
     - { role: apigee-opdk-update-component-inplace, component: 'apigee-setup', tags: ['setup', 'apigee-component-update'] }
     - { role: apigee-opdk-update-component-inplace, component: 'apigee-adminapi', tags: ['adminapi', 'apigee-component-update'] }
