updated for analytics maintenance

--- a/post-installation/upgrade/requirements.yml
+++ b/post-installation/upgrade/requirements.yml
@@ -5,7 +5,7 @@
 
 - src: https://github.com/carlosfrias/apigee-opdk-setup-default-settings
 
-- src: https://github.com/carlosfrias/apigee-opdk-set-reachable
+#- src: https://github.com/carlosfrias/apigee-opdk-set-reachable
 
 - src: https://github.com/carlosfrias/apigee-fetch-files
 
