--- a/post-installation/upgrade/upgrade.yml
+++ b/post-installation/upgrade/upgrade.yml
@@ -91,13 +91,13 @@
     - { role: apigee-opdk-setup-silent-installation-config, opdk_version: "{{ upgrade_from_opdk_version }}", tags: ['qpid-config']}
     - { role: apigee-opdk-start-components }
     - { role: apigee-opdk-server-self, server_types: ['qs'], tags: ['self']  }
-    - { role: apigee-opdk-set-reachable, reachability: False, server_types: ['qs'], tags: ['qpid-reachability-false'] }
+#    - { role: apigee-opdk-set-reachable, reachability: False, server_types: ['qs'], tags: ['qpid-reachability-false'] }
     - { role: apigee-opdk-settings-qpid, tags: ['config', 'cache', 'qpid']}
     - { role: apigee-opdk-iptables-port-block, destination_port: '{{ qpid_messaging_port }}', tags: ['qpid-port-block'] }
     - { role: apigee-opdk-update-component-qpidd, tags: ['qpid-upgrade'] }
     - { role: apigee-opdk-update-component,  component: 'qpid', tags: ['qpid-upgrade'] }
     - { role: apigee-opdk-iptables-flush, tags: ['qpid-iptables-flush'] }
-    - { role: apigee-opdk-set-reachable, reachability: True, server_types: ['qs'], tags: ['qpid-reachability-true'] }
+#    - { role: apigee-opdk-set-reachable, reachability: True, server_types: ['qs'], tags: ['qpid-reachability-true'] }
 
 - name: Upgrade Ldap
   hosts: ldap
