updated to generate and store files in the local apigee folder by region  and then copy to target node.

--- a/installations/response-file-generator/generate.yml
+++ b/installations/response-file-generator/generate.yml
@@ -1,6 +1,6 @@
 ---
 - name: Generate Response files
-  hosts: "{{ target_hosts }}"
+  hosts: "{{ target_hosts }}",pg
   tags: ['edge', 'edge-common']
   vars:
     property_folders:
