--- a/installations/multi-node/install.yml
+++ b/installations/multi-node/install.yml
@@ -149,6 +149,7 @@
 
 - name: Configure & Install Postgres
   hosts: pg
+  serial: 1
   gather_facts: no
   tags: ['pg','edge', 'analytics']
   vars:
@@ -158,16 +159,17 @@
     - "~/.apigee-secure"
     - "~/.apigee"
   roles:
-    - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'pg-config'] }
-    - { role: apigee-opdk-settings-postgres, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
-    - { role: apigee-opdk-settings-postgres, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
-    - { role: apigee-opdk-setup-silent-installation-config, tags: ['minimum', 'config', 'pg-config']  }
-    - { role: apigee-opdk-setup-component, profile: 'ps', tags: ['minimum', 'pg-setup'] }
-    - { role: apigee-opdk-start-components, tags: ['pg-start', 'start'] }
-    - { role: apigee-opdk-setup-status, tags: ['pg-status', 'status'] }
+            - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'pg-config'] }
+            - { role: apigee-opdk-settings-postgres, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
+            - { role: apigee-opdk-settings-postgres, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
+            - { role: apigee-opdk-setup-silent-installation-config, tags: ['minimum', 'config', 'pg-config']  }
+            - { role: apigee-opdk-setup-component, profile: 'ps', tags: ['minimum', 'pg-setup'] }
+            - { role: apigee-opdk-start-components, tags: ['pg-start', 'start'] }
+            - { role: apigee-opdk-setup-status, tags: ['pg-status', 'status'] }
 
 - name: Configure Postgres Master
   hosts: pgmaster
+  serial: 1
   gather_facts: no
   tags: ['pgmaster','edge', 'analytics']
   vars:
@@ -177,15 +179,16 @@
     - "~/.apigee-secure"
     - "~/.apigee"
   roles:
-  - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'pgmaster-config'] }
-  - { role: apigee-opdk-settings-postgres, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
-  - { role: apigee-opdk-setup-silent-installation-config, tags: ['minimum', 'config', 'pg-config']  }
-  - { role: apigee-opdk-setup-postgres-config, tags: ['minimum', 'config', 'pgmaster-config'] }
-  - { role: apigee-opdk-setup-postgres-master, tags: ['minimum', 'pgmaster-setup']  }
-  - { role: apigee-opdk-setup-status, tags: ['pgmaster-status', 'status']  }
+    - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'pgmaster-config'] }
+    - { role: apigee-opdk-settings-postgres, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
+    - { role: apigee-opdk-setup-silent-installation-config, tags: ['minimum', 'config', 'pg-config']  }
+    - { role: apigee-opdk-setup-postgres-config, tags: ['minimum', 'config', 'pgmaster-config'] }
+    - { role: apigee-opdk-setup-postgres-master, tags: ['minimum', 'pgmaster-setup']  }
+    - { role: apigee-opdk-setup-status, tags: ['pgmaster-status', 'status']  }
 
 - name: Configure Postgres Standby
   hosts: pgstandby
+  serial: 1
   gather_facts: no
   tags: ['pgstandby','edge', 'analytics']
   vars:
