Updated name from opdk_installer_path to opdk_resources_path

--- a/installations/devportal/install.yml
+++ b/installations/devportal/install.yml
@@ -60,7 +60,7 @@
   roles:
   - { role: apigee-fetch-files, download_pattern: '{{ pattern }}', download_folder: "{{ playbook_dir }}/{{ target_logs_folder }}" }
   vars:
-    opdk_installer_path: /tmp/edge
+    opdk_resources_path: /tmp/edge
     apigee_home: /opt/apigee
     target_logs_folder: planet_logs
     pattern:
@@ -75,7 +75,7 @@
     - { dir: '/etc/security/limits.d/', pattern: '*conf' }
     - { dir: '/var/log/', pattern: 'messages' }
     - { dir: '/tmp', pattern: 'setup*.log' }
-    - { dir: '{{ opdk_installer_path }}/', pattern: '*' }
+    - { dir: '{{ opdk_resources_path }}/', pattern: '*' }
     - { dir: '{{ apigee_home }}/', pattern: '*.out' }
     - { dir: '{{ apigee_home }}/var/log', pattern: '*.log' }
     - { dir: '{{ apigee_home }}/customer/', pattern: '*' }
