--- a/installations/mirror/requirements.yml
+++ b/installations/mirror/requirements.yml
@@ -100,3 +100,15 @@
 - src: https://github.com/carlosfrias/apigee-opdk-setup-os-pip.git
 
 - src: https://github.com/carlosfrias/apigee-opdk-setup-component-install.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-ldap.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-management-server.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-postgres.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-private-address.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-cassandra.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-region.git
