--- a/installations/mirror/upload-mirror.yml
+++ b/installations/mirror/upload-mirror.yml
@@ -1,4 +1,8 @@
 ---
+- name: Collect Edge Installation Attributes
+  include_playbook: collect-attributes.yml
+  tags: ['cache']
+
 - name: Upload apigee mirror archive
   hosts: "{{ target_hosts }}"
   tags: ['upload']
