updated collection of installation attributes

--- a/installations/mirror/upload-mirror.yml
+++ b/installations/mirror/upload-mirror.yml
@@ -8,6 +8,7 @@
   tags: ['upload']
   vars:
     apigee_home: "/opt/apigee"
+    local_apigee_path: "~/.apigee"
     property_folders:
     - "~/.apigee-secure"
     - "~/.apigee"
