--- a/installations/mirror/upload-mirror.yml
+++ b/installations/mirror/upload-mirror.yml
@@ -9,6 +9,7 @@
   vars:
     apigee_home: "/opt/apigee"
     local_apigee_path: "~/.apigee"
+    opdk_resources_path: "/tmp/edge"
     property_folders:
     - "~/.apigee-secure"
     - "~/.apigee"
