--- a/installations/mirror/install-archive.yml
+++ b/installations/mirror/install-archive.yml
@@ -11,7 +11,7 @@
       - "~/.apigee-secure"
       - "~/.apigee"
   roles:
-    - { role: apigee-opdk-modules, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup'] }
+    - { role: apigee-opdk-modules }
     - { role: apigee-opdk-setup-os-epel, tags: ['epel'] }
     - { role: apigee-opdk-shutdown-iptables, tags: ['minimum', 'iptables'] }
     - { role: apigee-opdk-yum-repository-proxy-config, tags: ['yum-proxy-config']}
@@ -19,9 +19,9 @@
     - { role: apigee-opdk-setup-os-limits, tags: ['limit'] }
     - { role: apigee-opdk-setup-os-sysctl, tags: ['sysctl'] }
     - { role: apigee-opdk-setup-selinux-disable, tags: ['minimum', 'selinux'] }
-    - { role: apigee-server-restart, tags: ['minimum', 'restart-server'], start_check_delay: 30, when: (selinux_disabled is defined and selinux_disabled.changed) or (iptables_disabled is defined and not iptables_disabled) or (force_restart is defined and force_restart)  }
+    - { role: apigee-server-restart, tags: ['restart-server'], start_check_delay: 30, when: (selinux_disabled is defined and selinux_disabled.changed) or (iptables_disabled is defined and not iptables_disabled) or (force_restart is defined and force_restart)  }
     - { role: apigee-opdk-setup-os-common, tags: ['os-common'] }
-    - { role: apigee-opdk-setup-openjdk, tags: ['minimum', 'openjdk'], jdk_version: '1.8' }
+    - { role: apigee-opdk-setup-openjdk, tags: ['openjdk'], jdk_version: '1.8' }
 
 - name: Install apigee mirror archive
   hosts: "{{ target_hosts }}"
@@ -32,7 +32,7 @@
     - "~/.apigee"
     apigeerepobasepath: '/opt/apigee/data/apigee-mirror'
   roles:
-  - { role: apigee-opdk-modules, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup'] }
+  - { role: apigee-opdk-modules }
   - { role: apigee-opdk-setup-apigee-user, tags: ['apigee-user', 'bootstrap'] }
   - { role: apigee-opdk-setup-apigee-user-ownership, tags: ['apigee-user', 'bootstrap'] }
   - { role: apigee-opdk-setup-java-home, tags: ['java-home', 'bootstrap'] }
