updated for expanding regions

--- a/post-installation/expand-planet-regions/requirements.yml
+++ b/post-installation/expand-planet-regions/requirements.yml
@@ -94,4 +94,5 @@
 
 - src: https://github.com/carlosfrias/apigee-opdk-setup-validate-cleanup.git
 
+- src: https://github.com/carlosfrias/apigee-opdk-cassandra-rebuild.git
 
